# orbiter

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  orbiter.config.example.yml
.github/: renovate.json5
.github/workflow/: ci.yml
.github/workflows/: ci.yml  release.yml
install/: install.sh
install/macos_packages/: build_and_notarize.sh  build_component_package.sh  build_distribution_package.sh  common.sh  readme.md
install/macos_packages/pkg_resources/English.lproj/: conclusion.html  license.html  welcome.html
install/windows/: main.wxs
install/windows/choco/: chocolateyInstall.install.ps1  chocolateyInstall.portable.ps1  starship.nuspec  update.ps1
install/windows/pkg_resources/: LICENSE.rtf
src/: config.rs  download.rs  hooks.rs  lib.rs  main.rs  paths.rs  process.rs  providers.rs  shimmer.rs  utils.rs
src/hooks/: download.rs  extract.rs  init.rs  install.rs  load.rs  mod.rs  resource.rs  script.rs  src.rs
src/lib/: config.rs  mod.rs  paths.rs  process.rs  script.rs  shimmer.rs
src/providers/: github.rs
src/utils/: cli.rs  completion.rs  config.rs  evaluatable.rs  httpclient.rs  listing.rs  paths.rs  pipeline.rs  script.rs  shells.rs  shim.rs  shimmer.rs  symlink.rs  update.rs
tests/data/: download.yml  minimum.yml
