[package]
name = "orbiter"
version = "0.5.0"
authors = ["Chris Chou <chhschou@hotmail.com>"]
edition = "2018"
license = "MIT"
description = "A cross-shell plugin and package manager"
homepage = "https://github.com/orbiter-rs/orbiter"
repository = "https://github.com/orbiter-rs/orbiter"
readme = "README.md"
keywords = ["shell", "console", "zsh", "bash", "fish"]
categories = ["command-line-utilities"]
exclude = [".gitignore", "*.yml", "tests/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
# error handling
eyre = "0.6"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
regex = "1.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }

dirs = "3.0"
glob = "0.3"
infer = "0.5"

log = "0.4"
env_logger = "0.9"

tokio = "1.24.1"
clap = { version = "4.2.1", features = ["derive"] }
time = {version = "0.3.31", features = ["local-offset", "formatting"]}

[dev-dependencies]

